dark mode fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -180,8 +180,8 @@ hr {
 	}
 
 	main a:hover {
-		background-color: #777;
 		color:inherit;
+		text-decoration: underline;
 	}
 	
 }
